--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -36,10 +36,10 @@ jobs:
     name: Build and analyze
     runs-on: windows-latest
     steps:
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
         with:
-          java-version: 17
+          dotnet-version: 8.0.400
           distribution: 'zulu' # Alternative distribution options are available.
       - uses: actions/checkout@v4
         with:
